--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('./sw.js')
         .then(reg => console.log('Service Worker зарегистрирован'))
         .catch(err => console.log('Ошибка:', err));
     });
